--- a/.env.example
+++ b/.env.example
@@ -57,10 +57,10 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_DEFAULT_REGION=us-east-1
+S3_BUCKET=
+S3_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
