--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "livewire/livewire": "^3.5",
         "symfony/dom-crawler": "^7.2"
     },
     "require-dev": {
