--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "postcss": "^8.5.1",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "^4.0.0"
     }
 }
